[package]
name = "okta-jwt-verifier"
description = "A helper library for working with JWT's for Okta in Rust"
version = "0.4.4"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["okta", "jwt"]
categories = ["web-programming"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
jsonwebtoken = "8.1.1"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
